<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    >
    <ListView
        android:id="@+id/lv_my_wallet_list"
        android:layout_marginTop="@dimen/DIMEN_30PX"
        android:layout_marginRight="@dimen/DIMEN_30PX"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:dividerHeight="@dimen/DIMEN_20PX"
        android:divider="#f5f5f5"
        android:fadeScrollbars="false"
        android:scrollbars="none"
        android:layout_marginLeft="@dimen/DIMEN_30PX"
        android:background="#f5f5f5"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_90PX"
        android:background="@color/whit"
        android:visibility="gone"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/DIMEN_30PX"
        android:paddingRight="@dimen/DIMEN_30PX">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/re_total_price"
            android:textColor="@color/mytext_1"
            android:textSize="@dimen/DIMEN_30PX" />

        <TextView
            android:id="@+id/tv_wall_details_total"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:text=""
            android:textColor="@color/mytext_1"
            android:textSize="@dimen/DIMEN_30PX" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_90PX"
        android:background="@color/whit"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/DIMEN_30PX"
        android:visibility="gone"
        android:paddingRight="@dimen/DIMEN_30PX">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/re_payment"
            android:textColor="@color/mytext_1"
            android:textSize="@dimen/DIMEN_30PX" />

        <TextView
            android:id="@+id/tv_wall_details_payment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:text=""
            android:textColor="@color/mytext_1"
            android:textSize="@dimen/DIMEN_30PX" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_90PX"
        android:background="@color/whit"
        android:orientation="horizontal"
        android:visibility="gone"
        android:paddingLeft="@dimen/DIMEN_30PX"
        android:paddingRight="@dimen/DIMEN_30PX">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/re_out_trade_no"
            android:textColor="@color/mytext_1"
            android:textSize="@dimen/DIMEN_30PX" />

        <TextView
            android:id="@+id/tv_wall_details_out_trade_no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:text=""
            android:textColor="@color/mytext_1"
            android:textSize="@dimen/DIMEN_30PX" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_90PX"
        android:background="@color/whit"
        android:orientation="horizontal"
        android:visibility="gone"
        android:paddingLeft="@dimen/DIMEN_30PX"
        android:paddingRight="@dimen/DIMEN_30PX">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/re_transaction_id"
            android:textColor="@color/mytext_1"
            android:textSize="@dimen/DIMEN_30PX" />

        <TextView
            android:id="@+id/tv_wall_details_transaction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:text=""
            android:textColor="@color/mytext_1"
            android:textSize="@dimen/DIMEN_30PX" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_90PX"
        android:background="@color/whit"
        android:orientation="horizontal"
        android:visibility="gone"
        android:paddingLeft="@dimen/DIMEN_30PX"
        android:paddingRight="@dimen/DIMEN_30PX">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/re_addtime"
            android:textColor="@color/mytext_1"
            android:textSize="@dimen/DIMEN_30PX" />

        <TextView
            android:id="@+id/tv_wall_details_addtimer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:text=""
            android:textColor="@color/mytext_1"
            android:textSize="@dimen/DIMEN_30PX" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_90PX"
        android:background="@color/whit"
        android:orientation="horizontal"
        android:visibility="gone"
        android:paddingLeft="@dimen/DIMEN_30PX"
        android:paddingRight="@dimen/DIMEN_30PX">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/re_endtime"
            android:textColor="@color/mytext_1"
            android:textSize="@dimen/DIMEN_30PX" />

        <TextView
            android:id="@+id/tv_wall_details_endtime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:text=""
            android:textColor="@color/mytext_1"
            android:textSize="@dimen/DIMEN_30PX" />
    </LinearLayout>
</LinearLayout>