<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_result_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_250PX"
        android:gravity="center"
        android:text="兼职发布成功"
        android:textColor="@color/my_details_yello"
        android:textSize="@dimen/DIMEN_50PX" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_90PX"
        android:background="@color/whit"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/DIMEN_30PX"
        android:paddingRight="@dimen/DIMEN_30PX">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/re_total_price"
            android:textColor="@color/mytext_1"
            android:textSize="@dimen/DIMEN_30PX" />

        <TextView
            android:id="@+id/tv_result_total"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:text=""
            android:textColor="@color/mytext_1"
            android:textSize="@dimen/DIMEN_30PX" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_90PX"
        android:background="@color/whit"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/DIMEN_30PX"
        android:paddingRight="@dimen/DIMEN_30PX">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/re_payment"
            android:textColor="@color/mytext_1"
            android:textSize="@dimen/DIMEN_30PX" />

        <TextView
            android:id="@+id/tv_result_payment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:text=""
            android:textColor="@color/mytext_1"
            android:textSize="@dimen/DIMEN_30PX" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_90PX"
        android:background="@color/whit"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/DIMEN_30PX"
        android:paddingRight="@dimen/DIMEN_30PX">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/re_out_trade_no"
            android:textColor="@color/mytext_1"
            android:textSize="@dimen/DIMEN_30PX" />

        <TextView
            android:id="@+id/tv_result_out_trade_no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:text=""
            android:textColor="@color/mytext_1"
            android:textSize="@dimen/DIMEN_30PX" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_90PX"
        android:background="@color/whit"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/DIMEN_30PX"
        android:paddingRight="@dimen/DIMEN_30PX">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/re_transaction_id"
            android:textColor="@color/mytext_1"
            android:textSize="@dimen/DIMEN_30PX" />

        <TextView
            android:id="@+id/tv_result_transaction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:text=""
            android:textColor="@color/mytext_1"
            android:textSize="@dimen/DIMEN_30PX" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_90PX"
        android:background="@color/whit"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/DIMEN_30PX"
        android:paddingRight="@dimen/DIMEN_30PX">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/re_addtime"
            android:textColor="@color/mytext_1"
            android:textSize="@dimen/DIMEN_30PX" />

        <TextView
            android:id="@+id/tv_result_addtimer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:text=""
            android:textColor="@color/mytext_1"
            android:textSize="@dimen/DIMEN_30PX" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_90PX"
        android:background="@color/whit"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/DIMEN_30PX"
        android:paddingRight="@dimen/DIMEN_30PX">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/re_endtime"
            android:textColor="@color/mytext_1"
            android:textSize="@dimen/DIMEN_30PX" />

        <TextView
            android:id="@+id/tv_result_endtime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:text=""
            android:textColor="@color/mytext_1"
            android:textSize="@dimen/DIMEN_30PX" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_result_queren"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_90PX"
        android:layout_marginLeft="@dimen/DIMEN_60PX"
        android:layout_marginRight="@dimen/DIMEN_60PX"
        android:layout_marginTop="@dimen/DIMEN_80PX"
        android:background="@drawable/bg_login_2"
        android:gravity="center"
        android:text="确认完成"
        android:textColor="@color/whit"
        android:textSize="@dimen/DIMEN_30PX" />
</LinearLayout>